Another day's work on ecommerce. Mostly admin search and front-end things.

--- a/app/assets/stylesheets/modules/admin/_lists_tables.scss
+++ b/app/assets/stylesheets/modules/admin/_lists_tables.scss
@@ -65,7 +65,7 @@
 }
 .admin-index-table--buttons-cell {
   min-width: 170px;
-  text-align: center;
+  text-align: left;
 }
 .admin-index-table--sku-cell {
   min-width: 160px;
