--- a/app/views/admin/ecommerce/customer_orders/show.haml
+++ b/app/views/admin/ecommerce/customer_orders/show.haml
@@ -7,7 +7,7 @@
       = link_to 'Cancel Order', admin_ecommerce_customer_order_path(@order), :method => :delete, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-danger btn-xs'
 
 .row
-  .col-sm-3
+  .col-sm-4
     %p
       %b Ship To:
       %br
@@ -23,6 +23,14 @@
       - address_lines.each do |line|
         = line
         %br
+  .col-sm-4
+    %p
+      %b Customer Information:
+      %br
+      = link_to edit_admin_user_path(@order.user) do
+        =@order.user.full_name
+      %br
+      =@order.user.email
 
 .row
   .col-sm-12
@@ -41,7 +49,8 @@
         - @order.line_items.each do |line_item|
           %tr
             %td
-              %i= line_item.name
+              = link_to admin_gift_path(line_item.orderable) do
+                %i= line_item.name
             %td= line_item.orderable.wrapt_sku
             %td
               = link_to line_item.vendor_name, admin_vendor_path(line_item.vendor)
