--- a/app/views/admin/gifts/_form.html.haml
+++ b/app/views/admin/gifts/_form.html.haml
@@ -19,8 +19,7 @@
         = f.association :product_category, as: :select, collection: ProductCategory.categories, input_html: {data: {behavior: 'product-category-input'}}
         = f.association :product_subcategory, as: :select, collection: (@gift.product_category&.children || []), input_html: {data: {behavior: 'product-subcategory-input'}}
         = f.input :wrapt_sku, label: 'Wrapt SKU', disabled: true
-    = f.input :date_available, html5: true, label: 'Date Available'
-    = f.input :date_discontinued, html5: true, label: 'Date Discontinued'
+    = f.input :available, label: 'Availabe to Customers'
     = f.input :featured, label: 'Promote this gift in the recommendations'
 
   .form-actions
