--- a/app/views/admin/gifts/index.html.haml
+++ b/app/views/admin/gifts/index.html.haml
@@ -29,6 +29,10 @@
         .col-sm-4
           = form.collection_select :vendor_id, Vendor.order(:name), :id, :name, {prompt: 'Vendor'}, class: 'form-control'
       .form-group
+        %label.col-sm-2.control-label Available to Customers
+        .col-sm-4
+          = form.collection_select :available, ['Either', 'Yes', 'No'], :to_s, :to_s, {}, class: 'form-control'
+      .form-group
         %label.col-sm-2.control-label Price Range
         .col-sm-4
           .input-group
