Charging moved into its own service to simplify thinking of customer purchase service.

--- a/app/views/admin/ecommerce/customer_orders/_details.haml
+++ b/app/views/admin/ecommerce/customer_orders/_details.haml
@@ -16,7 +16,7 @@
       %h4.panel-title
         %span.glyphicon.glyphicon-plus
         %a{"data-parent" => "#accordion", "data-toggle" => "collapse", :href => "#collapseTwo"}
-          Charge Chages
+          Charge Changes
     #collapseTwo.panel-collapse.collapse
       .panel-body
         = render "versions", versions: @order.charge.versions
