--- a/app/views/admin/ecommerce/purchase_orders/show.haml
+++ b/app/views/admin/ecommerce/purchase_orders/show.haml
@@ -5,7 +5,9 @@
       Purchase Order
       = @order.order_number
       = link_to 'Resend notification to vendor', resend_notification_admin_ecommerce_purchase_order_path(@order), :method => :put, :data => { :confirm => 'Are you sure?' }, class: 'btn btn-warning btn-xs'
-      = link_to 'View Shipping Label', @order.shipping_label.url, target: '_blank', class: 'btn btn-default btn-xs'
+      = link_to 'View confirmation page for vendor', checkout_vendor_confirmation_path(id: @order.vendor_token), class: 'btn btn-default btn-xs'
+      - if @shipping_label.present?
+        = link_to 'View Shipping Label', @order.shipping_label.url, target: '_blank', class: 'btn btn-default btn-xs'
     %h4
       Associated with customer order
       = link_to @order.customer_order.order_number, admin_ecommerce_customer_order_path(@order.customer_order)
@@ -45,22 +47,31 @@
         = line
         %br
 
-  .col-sm-4
-    %p
-      %strong Shipping Information:
-      %br
-      %strong ETA:
-      =@shipping_label.eta || 'N/A'
-      %br
-      %strong Tracking Status:
-      =@shipping_label.tracking_status || 'N/A'
-      %br
-      %strong Tracking Link:
-      = link_to @shipping_label.tracking_url, target: '_blank' do
-        = @shipping_label.tracking_number
-      %br
-      %strong Tracking Updated At:
-      = format_date(@shipping_label.tracking_updated_at)
+  - if @shipping_label.present?
+    .col-sm-4
+      %p
+        %strong Shipping Information:
+        %br
+        %strong ETA:
+        =@shipping_label.eta || 'N/A'
+        %br
+        %strong Tracking Status:
+        =@shipping_label.tracking_status || 'N/A'
+        %br
+        %strong Tracking Link:
+        = link_to @shipping_label.tracking_url, target: '_blank' do
+          = @shipping_label.tracking_number
+        %br
+        %strong Tracking Updated At:
+        = format_date(@shipping_label.tracking_updated_at)
+  - else
+    .col-sm-4
+      %p
+        %strong Vendor Confirmation:
+        = @order.vendor_acknowledgement_status
+        %br
+        %strong Vendor Reason:
+        = @order.vendor_acknowledgement_reason
 
 .row
   .col-sm-12
@@ -101,13 +112,3 @@
           %td
           %td.text-right
             %b= number_to_currency(@order.total_due_in_dollars)
-
-
--#.row
--#  .col-sm-12
--#    %h3 Order Changes
--#    = render "versions", versions: @order.versions
--#
--#.row
--#  .col-sm-12
--#    = render "raw_data", order: @order
